# routes/api.php
@@ -89,7 +89,9 @@ Route::post('/sharafs/{sharaf_id}/najwa', [SharafPaymentController::class, 'najw
 // Wajebaat (Takhmeen / Finance Ada) routes
 Route::post('/wajebaat/takhmeen', [WajebaatController::class, 'takhmeenStore']);
 Route::get('/wajebaat/history/{its_id}', [WajebaatController::class, 'history']);
+Route::get('/miqaats/{miqaat_id}/mumin-profile/{its_id}', [WajebaatController::class, 'muminProfile']);
 Route::get('/miqaats/{miqaat_id}/wajebaat', [WajebaatController::class, 'index']);
+Route::get('/miqaats/{miqaat_id}/wajebaat/by-its-list', [WajebaatController::class, 'wajebaatByItsList']);
 Route::get('/miqaats/{miqaat_id}/wajebaat/{its_id}', [WajebaatController::class, 'show']);
 Route::get('/miqaats/{miqaat_id}/wajebaat-categories', [WajebaatController::class, 'categories']);
 Route::get('/miqaats/{miqaat_id}/wajebaat/{its_id}/clearance', [WajebaatController::class, 'clearance']);
